--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -8,12 +8,12 @@ body.openerp {
     margin: 0;
     height: 100%;
     font-size: 80%;
-    font-family: Roboto, Ubuntu, Helvetica, sans-serif;
+    font-family: Roboto, "Lucida Grande", Droid, Helvetica, Verdana, Arial, sans-serif;
 }
 
 .openerp, .openerp textarea, .openerp input, .openerp select, .openerp option,
 .openerp button, .openerp .ui-widget {
-    font-family: Roboto, Ubuntu, Helvetica, sans-serif;
+    font-family: Roboto, "Lucida Grande", Droid, Helvetica, Verdana, Arial, sans-serif;
     font-size:85%;
 }
 
@@ -98,7 +98,7 @@ body.openerp {
 .login {
     padding: 0;
     margin: 0;
-    font-family: Roboto, "Lucida Grande", Helvetica, Verdana, Arial;
+    font-family: Roboto, "Lucida Grande", Droid, Helvetica, Verdana, Arial, sans-serif;
     background: url("/web/static/src/img/pattern.png") repeat;
     color: #eee;
     font-size: 6px;
@@ -128,7 +128,7 @@ body.openerp {
     cursor: pointer;
     padding: 6px 16px;
     font-size: 13px;
-    font-family: Roboto, "Lucida Grande", Helvetica, Verdana, Arial;
+    font-family: Roboto, "Lucida Grande", Droid, Helvetica, Verdana, Arial, sans-serif;
     border: 1px solid #222222;
     color: black;
     margin: 0;
@@ -149,7 +149,7 @@ body.openerp {
 .login input, .login select {
     width: 252px;
     font-size: 14px;
-    font-family: Roboto, "Lucida Grande", Helvetica, Verdana, Arial;
+    font-family: Roboto, "Lucida Grande", Droid, Helvetica, Verdana, Arial, sans-serif;
     border: 1px solid #999999;
     background: whitesmoke;
     -moz-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3);
@@ -446,12 +446,12 @@ label.error {
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
 
-    color: #8e8e8e;
+    color: #6e6e6e;
     text-shadow: #ffffff 0 1px 0;
     text-decoration: none;
     text-transform: uppercase;
     line-height: 20px;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 80%;
 
     white-space: nowrap;
@@ -564,7 +564,7 @@ label.error {
     /* for ie9 */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#949292', endColorstr='#5B5A5A',GradientType=0 ); /* IE6-9 */
     white-space: nowrap;
-    color: #8e8e8e;
+    color: #6e6e6e;
     text-shadow: 0 1px 0 #ffffff;
 
 }
@@ -608,7 +608,7 @@ label.error {
     background: -moz-linear-gradient(top, #FFFFFF 0%, #e6e6e6 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(100%,#e6e6e6));
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFFFFF', endColorstr='#e6e6e6',GradientType=0 );
-    color: #8e8e8e;
+    color: #6e6e6e;
     letter-spacing: 0.5px;
     text-shadow: 0 1px 0 #ffffff;
 }
@@ -645,7 +645,7 @@ label.error {
 }
 /* User name header */
 .openerp .header_title small {
-    color: #8e8e8e;
+    color: #6e6e6e;
     font-size: 80%;
     font-weight: normal;
 }
@@ -665,7 +665,7 @@ label.error {
 }
 .openerp .header_corner .block a {
     display: block;
-    color: #8e8e8e;
+    color: #6e6e6e;
     text-decoration: none;
     padding: 0 10px;
 }
@@ -2148,7 +2148,7 @@ label.error {
     display: -moz-inline-stack;
     display: inline-block;
     display: inline; /*IE7 */
-    color: #8e8e8e;
+    color: #6e6e6e;
     text-align: center;
     border-left: 1px solid #8e8e8e;
     padding: 0 3px;
