--- a/dt_product_serial/wizard/stock_partial_picking.xml
+++ b/dt_product_serial/wizard/stock_partial_picking.xml
@@ -15,6 +15,7 @@
                 </field>
                 <field name="quantity" position="replace">
                     <field name="quantity" attrs="{'readonly': [('split_type', '=', 'single')]}" />
+                    <field name="balance" groups="stock.view_balance"/>
                 </field>
                 <field name="prodlot_id" position="replace">
                     <field name="new_prodlot_code" on_change="onchange_new_prodlot_code(new_prodlot_code, product_id, prodlot_id)" />
