--- a/dt_product_serial/wizard/stock_partial_picking.xml
+++ b/dt_product_serial/wizard/stock_partial_picking.xml
@@ -16,6 +16,9 @@
                 <field name="quantity" position="replace">
                     <field name="quantity" attrs="{'readonly': [('split_type', '=', 'single')]}" />
                     <field name="balance" groups="stock.view_balance"/>
+                    <field name="pallet_qty" groups="stock.view_pallet" />
+                    <field name="pallet_id" groups="stock.view_pallet" widget="selection" />
+                    
                 </field>
                 <field name="prodlot_id" position="replace">
                     <field name="new_prodlot_code" on_change="onchange_new_prodlot_code(new_prodlot_code, product_id, prodlot_id)" />
