--- a/partner_kanban/static/src/css/partner.css
+++ b/partner_kanban/static/src/css/partner.css
@@ -1,14 +1,14 @@
-.oe_partner_vignette {
+.openerp .oe_partner_vignette {
   padding: 8px 0;
   min-height: 100px;
 }
 
-.oe_partner_image, .oe_partner_details {
+.openerp .oe_partner_image, .oe_partner_details {
   display: inline-block;
   vertical-align: top;
 }
 
-.oe_partner_image {
+.openerp .oe_partner_image {
   width: 128px;
   height: 128px;
   text-align: center;
@@ -25,7 +25,7 @@
   background: #ffffff;
 }
 
-.oe_partner_picture {
+.openerp .oe_partner_picture {
   width: auto;
   height: auto;
   max-width:128px;
@@ -33,7 +33,7 @@
   clip: rect(10px, 128px, 138px, 0px);
 }
 
-.oe_partner_picture_wide {
+.openerp .oe_partner_picture_wide {
   height: auto;
   width: auto;
   max-width:128px;
@@ -41,32 +41,32 @@
   clip: rect(0px, 143px, 128px, 15px);
 }
 
-.oe_partner_details {
+.openerp .oe_partner_details {
   width: 220px;
   font-size: 13px;
   padding: 2px 5px;
   min-height: 120px;
 }
 
-.oe_partner_details h4 {
+.openerp .oe_partner_details h4 {
   margin: 0;
   font-size: 13px;
 }
 
-.oe_partner_details h4 a {
+.openerp .oe_partner_details h4 a {
   color: #fd5f60;
 }
 
-.oe_partner_details h4 a:hover {
+.openerp .oe_partner_details h4 a:hover {
   text-decoration: underline;
 }
 
-.oe_partner_details ul {
+.openerp .oe_partner_details ul {
   margin: 3px 0 5px;
   padding: 0;
   list-style: none;
 }
 
-.oe_partner_details li {
+.openerp .oe_partner_details li {
   margin: 2px 0;
 }
