--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -407,6 +407,7 @@ label.error {
 /* Upper Menu */
 .openerp .menu {
     height: 24px;
+
     background: #e6e6e6; /* Old browsers */
     background: -moz-linear-gradient(top, #ffffff 0%, #ffffff 8%, #transparent 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(8%,#ffffff), color-stop(100%,#transparent)); /* Chrome,Safari4+ */
@@ -432,14 +433,14 @@ label.error {
     margin: 0px 2px;
     padding: 0px 2px 12px 8px;
 
-    background: #e6e6e6; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 10%, #e6e6e6 60%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,#ffffff), color-stop(60%,#e6e6e6)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #ffffff 10%,#e6e6e6 60%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #ffffff 10%,#e6e6e6 60%); /* Opera11.10+ */
-    background: -ms-linear-gradient(top, #ffffff 10%,#e6e6e6 60%); /* IE10+ */
+//    background: #e6e6e6; /* Old browsers */
+//    background: -moz-linear-gradient(top, #ffffff 10%, #e6e6e6 60%); /* FF3.6+ */
+//    background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,#ffffff), color-stop(60%,#e6e6e6)); /* Chrome,Safari4+ */
+//    background: -webkit-linear-gradient(top, #ffffff 10%,#e6e6e6 60%); /* Chrome10+,Safari5.1+ */
+//    background: -o-linear-gradient(top, #ffffff 10%,#e6e6e6 60%); /* Opera11.10+ */
+//    background: -ms-linear-gradient(top, #ffffff 10%,#e6e6e6 60%); /* IE10+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
-    background: linear-gradient(top, #ffffff 10%,#e6e6e6 60%); /* W3C */
+//    background: linear-gradient(top, #ffffff 10%,#e6e6e6 60%); /* W3C */
 
     border: 1px solid #e2e2e2;
     border-radius: 4px;
@@ -461,17 +462,18 @@ label.error {
 .openerp .menu a:focus,
 .openerp .menu a.active {
     background: #8e8e8e; /* Old browsers */
-    background: -moz-linear-gradient(top, #000000 0%, #8e8e8e 50%, #8e8e8e 90%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8e8e8e), color-stop(50%,#8e8e8e), color-stop(90%,#8e8e8e)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #000000 0%,#8e8e8e 50%,#8e8e8e 90%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #000000 0%,#8e8e8e 50%,#8e8e8e 90%); /* Opera11.10+ */
-    background: -ms-linear-gradient(top, #000000 0%,#8e8e8e 50%,#8e8e8e 90%); /* IE10+ */
+    background: -moz-linear-gradient(top, #000000 0%, #eeeeee 50%, #8e8e8e 90%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8e8e8e), color-stop(50%,#eeeeee), color-stop(90%,#8e8e8e)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #000000 0%,#eeeeee 50%,#8e8e8e 90%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #000000 0%,#eeeeee 50%,#8e8e8e 90%); /* Opera11.10+ */
+    background: -ms-linear-gradient(top, #000000 0%,#eeeeee 50%,#eeeeee 90%); /* IE10+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#8e8e8e',GradientType=0 ); /* IE6-9 */
-    background: linear-gradient(top, #000000 0%,#8e8e8e 50%,#8e8e8e 90%); /* W3C */
+    background: linear-gradient(top, #000000 0%,#eeeeee 50%,#8e8e8e 90%); /* W3C */
     /* for ie */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
-    color: #e6e6e6;
+/*    color: #e6e6e6; */
     font-weight: bold;
+//    box-shadow: 0px 5px 10px #000000, 0px 10px 10px #A7ACB3 inset;
 }
 /* Secondary Menu */
 .openerp .secondary_menu .oe_toggle_secondary_menu {
@@ -507,14 +509,14 @@ label.error {
 .openerp .secondary_menu {
     width: 200px;
     min-width: 200px;
-    border-right: 1px solid #e6e6e6;
-    border-bottom: 1px solid #e6e6e6;
+    border-right: 0px solid #e6e6e6;
+    border-bottom: 0px solid #e6e6e6;
     background: #e6e6e6;
     vertical-align: top;
     height: 100%;
     display: block;
     position: relative;
-    font-size:85%;
+    font-size:100%;
 }
 
 .openerp .secondary_menu img,
@@ -531,12 +533,12 @@ label.error {
     position: static;
 }
 .openerp .secondary_menu.oe_folded .oe_secondary_menu.active {
-    position: absolute;
+    position: fixed;
     margin-left: 200px;
     margin-top: 20px;
     z-index: 100;
     border: 4px solid #e6e6e6;
-    border-color: rgba(88, 88, 88, .5);
+    border-color: #e6e6e6;
     border-radius: 4px;
     min-width: 200px;
 }
@@ -553,17 +555,17 @@ label.error {
     background: #ffffff;
 }
 .openerp .secondary_menu a.oe_secondary_menu_item {
-    background: #e6e6e6; /* Old browsers */
-    background: -moz-linear-gradient(top, #ffffff 0%, #e6e6e6 87%, #e6e6e6 99%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(87%,#e6e6e6), color-stop(99%,#282828)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #ffffff 0%,#e6e6e6 87%,#e6e6e6 99%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #ffffff 0%,#e6e6e6 87%,#e6e6e6 99%); /* Opera11.10+ */
-    background: -ms-linear-gradient(top, #ffffff 0%,#e6e6e6 87%,#e6e6e6 99%); /* IE10+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
-    background: linear-gradient(top, #ffffff 0%,#e6e6e6 87%,#e6e6e6 99%); /* W3C */
+//    background: #e6e6e6; /* Old browsers */
+//    background: -moz-linear-gradient(top, #ffffff 0%, #e6e6e6 87%, #e6e6e6 99%); /* FF3.6+ */
+//    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(87%,#e6e6e6), color-stop(99%,#282828)); /* Chrome,Safari4+ */
+//    background: -webkit-linear-gradient(top, #ffffff 0%,#e6e6e6 87%,#e6e6e6 99%); /* Chrome10+,Safari5.1+ */
+//    background: -o-linear-gradient(top, #ffffff 0%,#e6e6e6 87%,#e6e6e6 99%); /* Opera11.10+ */
+//    background: -ms-linear-gradient(top, #ffffff 0%,#e6e6e6 87%,#e6e6e6 99%); /* IE10+ */
+//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
+//    background: linear-gradient(top, #ffffff 0%,#e6e6e6 87%,#e6e6e6 99%); /* W3C */
     /* for ie9 */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#949292', endColorstr='#5B5A5A',GradientType=0 ); /* IE6-9 */
-    white-space: nowrap;
+//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#949292', endColorstr='#5B5A5A',GradientType=0 ); /* IE6-9 */
+//    white-space: nowrap;
     color: #6e6e6e;
     text-shadow: 0 1px 0 #ffffff;
 
@@ -579,20 +581,22 @@ label.error {
 .openerp a.oe_secondary_submenu_item:hover,
 .openerp a.oe_secondary_submenu_item.leaf.active {
     display: block;
-    background: #8e8e8e; /* Old browsers */
-    background: -moz-linear-gradient(top, #000000 0%, #000000 11%, #8e8e8e 86%, #8e8e8e 91%, #8e8e8e 96%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(11%,#000000), color-stop(86%,#8e8e8e), color-stop(91%,#8e8e8e), color-stop(96%,#8e8e8e)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* Opera11.10+ */
-    background: -ms-linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* IE10+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#8e8e8e',GradientType=0 ); /* IE6-9 */
-    background: linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* W3C */
+//    background: #8e8e8e; /* Old browsers */
+//    background: -moz-linear-gradient(top, #000000 0%, #000000 11%, #8e8e8e 86%, #8e8e8e 91%, #8e8e8e 96%); /* FF3.6+ */
+//    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(11%,#000000), color-stop(86%,#8e8e8e), color-stop(91%,#8e8e8e), color-stop(96%,#8e8e8e)); /* Chrome,Safari4+ */
+//    background: -webkit-linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* Chrome10+,Safari5.1+ */
+//    background: -o-linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* Opera11.10+ */
+//    background: -ms-linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* IE10+ */
+//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#8e8e8e',GradientType=0 ); /* IE6-9 */
+//    background: linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* W3C */
+    background: none;
+//    box-shadow: 0 1px 2px #FFFFFF, 0 1px 1px #6e6e6e inset;
     padding: 0 5px 2px 10px;
     line-height: 20px;
-    color: #ffffff;
+    color: #000;
     font-weight: bold;
     text-decoration: none;
-    text-shadow: #e6e6e6 0 1px 0;
+//    text-shadow: #e6e6e6 0 1px 0;
 }
 .openerp a.oe_secondary_submenu_item.submenu.opened span:before {
     content: "\25be";
