--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -45,13 +45,13 @@ body.openerp {
 }
 .oe-listview-header-columns {
     background: #d1d1d1; /* Old browsers */
-    background: -moz-linear-gradient(top, #FAFAFA 0%, #d1d1d1 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(100%,#d1d1d1)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* Opera11.10+ */
-    background: -ms-linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* IE10+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#d1d1d1',GradientType=0 ); /* IE6-9 */
-    background: linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* W3C */
+//    background: -moz-linear-gradient(top, #FAFAFA 0%, #d1d1d1 100%); /* FF3.6+ */
+//    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(100%,#d1d1d1)); /* Chrome,Safari4+ */
+//    background: -webkit-linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* Chrome10+,Safari5.1+ */
+//    background: -o-linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* Opera11.10+ */
+//    background: -ms-linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* IE10+ */
+//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#d1d1d1',GradientType=0 ); /* IE6-9 */
+//    background: linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* W3C */
 }
 
 .openerp .oe_hide {
@@ -442,7 +442,7 @@ label.error {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
 //    background: linear-gradient(top, #FAFAFA 10%,#e6e6e6 60%); /* W3C */
 
-    border: 1px solid #e2e2e2;
+    border: 1px solid #8e8e8e;
     border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
@@ -719,13 +719,13 @@ label.error {
 
 /* Footer */
 .openerp div.oe_footer {
-    background: none repeat scroll 0 0 #CCCCCC;
+//    background: none repeat scroll 0 0 #CCCCCC;
     overflow: hidden;
-    padding: 5px 0;
+//    padding: 5px 0;
     position: relative;
-    -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.4);
-    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.4);
-    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.4);
+//    -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.4);
+//    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.4);
+//    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.4);
 }
 .openerp div.oe_footer p.oe_footer_powered {
     left: 50%;
@@ -1365,7 +1365,7 @@ label.error {
 .openerp .oe_forms select,
 .openerp .oe_forms .oe_button,
 .openerp .oe_forms textarea {
-    font-size: 85%;
+    font-size: 90%;
     font-weight: normal;
 }
 
@@ -1404,7 +1404,7 @@ label.error {
     margin: 3px 0 0 3px;
     white-space: nowrap;
     font-weight: normal;
-    color: #8e8e8e;
+    color: #1e1e1e;
 }
 .openerp .oe_forms .searchview_group_content label.oe_label, .openerp .searchview_group_content .oe_forms label.oe_label_help { /* making a distinction between labels in search view and other labels */
     margin: 3px 0 0 3px;
