--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -1410,6 +1410,7 @@ label.error {
     white-space: nowrap;
     font-weight: normal;
     color: #1e1e1e;
+    font-weight: bold;
 }
 .openerp .oe_forms .searchview_group_content label.oe_label, .openerp .searchview_group_content .oe_forms label.oe_label_help { /* making a distinction between labels in search view and other labels */
     margin: 3px 0 0 3px;
@@ -1669,11 +1670,11 @@ label.error {
 }
 .openerp .separator.horizontal {
     font-weight: bold;
-    font-style: oblique;
+//    font-style: oblique;
     border-bottom-width: 1px;
     margin: 3px 4px 3px 1px;
     height: 17px;
-    font-size: 95%;
+    font-size: 120%;
     
 }
 .openerp .separator.horizontal:empty {
@@ -1860,7 +1861,7 @@ label.error {
 
 .openerp .sidebar-main-div {
     height: 100%;
-    border-left: 1px solid #e6e6e6;
+//    border-left: 1px solid #e6e6e6;
 }
 
 .openerp .sidebar-content {
@@ -1880,7 +1881,7 @@ label.error {
 }
 
 .openerp .sidebar-main-div a {
-    color: #8e8e8e;
+//    color: #8e8e8e;
 //    text-shadow: white 0 1px 0;
     text-decoration: none;
 }
@@ -1927,28 +1928,27 @@ label.error {
 
 .openerp .view-manager-main-sidebar h2 {
     margin:0;
-    font-size: 1.15em;
-    color: #8E8E8E;
+    font-size: 100%;
+    color: #0E0E0E;
 //    text-shadow: white 0 1px 0;
     padding-left: 10px;
     padding-right: 21px;
-    height: 21px;
+//    height: 21px;
 
-    background: #FAFAFA; /* Old browsers */
-    background: -moz-linear-gradient(top, #FAFAFA 0%, #e6e6e6 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(100%,#e6e6e6)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* Opera11.10+ */
-    background: -ms-linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* IE10+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#E6E6E6',GradientType=0 ); /* IE6-9 */
-    background: linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* W3C */
+    background: #E6E6E6; /* Old browsers */
+//background: -moz-linear-gradient(top, #FAFAFA 0%, #e6e6e6 100%); /* FF3.6+ */
+//    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(100%,#e6e6e6)); /* Chrome,Safari4+ */
+//    background: -webkit-linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* Chrome10+,Safari5.1+ */
+//    background: -o-linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* Opera11.10+ */
+//    background: -ms-linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* IE10+ */
+//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#E6E6E6',GradientType=0 ); /* IE6-9 */
+//    background: linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* W3C */
 
-    border: 1px solid #E6E6E6;
-    border-right-width: 0;
-    border-left-width: 0;
-}
-.openerp .view-manager-main-sidebar h2 {
-    border-top-width: 0;
+    border: 1px solid #8E8E8E;
+//    border-right-width: 0;
+//    border-left-width: 0;
+    border-radius: 4px;
+    font-weight: normal;
 }
 
 .openerp .view-manager-main-sidebar ul {
@@ -2498,7 +2498,7 @@ ul.oe-arrow-list li.oe-arrow-list-selected .oe-arrow-list-after {
 .openerp .oe_button.disabled,
 .openerp .oe_button:disabled {
     background: #f0f0f0 !important;
-    border: 1px solid #d1d1d1 !important;
+    border: 1px solid #f1f1f1 !important;
     font-size: 12px;
     padding: 3px 10px;
     -moz-box-shadow: none !important, 0 0 0 transparent;
