--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -45,13 +45,6 @@ body.openerp {
 }
 .oe-listview-header-columns {
     background: #d1d1d1; /* Old browsers */
-//    background: -moz-linear-gradient(top, #FAFAFA 0%, #d1d1d1 100%); /* FF3.6+ */
-//    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(100%,#d1d1d1)); /* Chrome,Safari4+ */
-//    background: -webkit-linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* Chrome10+,Safari5.1+ */
-//    background: -o-linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* Opera11.10+ */
-//    background: -ms-linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* IE10+ */
-//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#d1d1d1',GradientType=0 ); /* IE6-9 */
-//    background: linear-gradient(top, #FAFAFA 0%,#d1d1d1 100%); /* W3C */
 }
 
 .openerp .oe_hide {
@@ -433,14 +426,7 @@ label.error {
     margin: 0px 2px;
     padding: 0px 2px 12px 8px;
 
-//    background: #e6e6e6; /* Old browsers */
-//    background: -moz-linear-gradient(top, #FAFAFA 10%, #e6e6e6 60%); /* FF3.6+ */
-//    background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,#FAFAFA), color-stop(60%,#e6e6e6)); /* Chrome,Safari4+ */
-//    background: -webkit-linear-gradient(top, #FAFAFA 10%,#e6e6e6 60%); /* Chrome10+,Safari5.1+ */
-//    background: -o-linear-gradient(top, #FAFAFA 10%,#e6e6e6 60%); /* Opera11.10+ */
-//    background: -ms-linear-gradient(top, #FAFAFA 10%,#e6e6e6 60%); /* IE10+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
-//    background: linear-gradient(top, #FAFAFA 10%,#e6e6e6 60%); /* W3C */
 
     border: 1px solid #8e8e8e;
     border-radius: 4px;
@@ -448,7 +434,6 @@ label.error {
     -webkit-border-radius: 4px;
 
     color: #6e6e6e;
-//    text-shadow: #FAFAFA 0 1px 0;
     text-decoration: none;
     text-transform: uppercase;
     line-height: 20px;
@@ -462,19 +447,11 @@ label.error {
 .openerp .menu a:focus,
 .openerp .menu a.active {
     background: #FAFAFA; /* Old browsers */
-//    background: -moz-linear-gradient(top, #000000 0%, #eeeeee 50%, #8e8e8e 90%); /* FF3.6+ */
-//    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8e8e8e), color-stop(50%,#eeeeee), color-stop(90%,#8e8e8e)); /* Chrome,Safari4+ */
-//    background: -webkit-linear-gradient(top, #000000 0%,#eeeeee 50%,#8e8e8e 90%); /* Chrome10+,Safari5.1+ */
-//    background: -o-linear-gradient(top, #000000 0%,#eeeeee 50%,#8e8e8e 90%); /* Opera11.10+ */
-//    background: -ms-linear-gradient(top, #000000 0%,#eeeeee 50%,#eeeeee 90%); /* IE10+ */
-//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#8e8e8e',GradientType=0 ); /* IE6-9 */
-//    background: linear-gradient(top, #000000 0%,#eeeeee 50%,#8e8e8e 90%); /* W3C */
     /* for ie */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
 /*    color: #e6e6e6; */
     font-weight: bold;
     font-size: 85%;    
-//    box-shadow: 0px 5px 10px #000000, 0px 10px 10px #A7ACB3 inset;
 }
 /* Secondary Menu */
 .openerp .secondary_menu .oe_toggle_secondary_menu {
@@ -487,7 +464,6 @@ label.error {
     z-index: 10;
     background: transparent;
     color: #1e1e1e;
-//    text-shadow: 0 1px 0 #FAFAFA;
     text-align: center;
     font-size: 18px;
     line-height: 18px;
@@ -510,8 +486,6 @@ label.error {
 .openerp .secondary_menu {
     width: 200px;
     min-width: 200px;
-//    border-right: 1px solid #000000;
-//    border-bottom: 1px solid #000000;
     background: #e6e6e6;
     vertical-align: top;
     height: 100%;
@@ -552,25 +526,13 @@ label.error {
     white-space: nowrap;
     color: #1e1e1e;
 
-//    text-shadow: 0 1px 0 #FAFAFA;
 }
 .openerp .oe_secondary_submenu {
     background: #FAFAFA;
 }
 .openerp .secondary_menu a.oe_secondary_menu_item {
     background: #e6e6e6; /* Old browsers */
-//    background: -moz-linear-gradient(top, #FAFAFA 0%, #e6e6e6 87%, #e6e6e6 99%); /* FF3.6+ */
-//    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(87%,#e6e6e6), color-stop(99%,#282828)); /* Chrome,Safari4+ */
-//    background: -webkit-linear-gradient(top, #FAFAFA 0%,#e6e6e6 87%,#e6e6e6 99%); /* Chrome10+,Safari5.1+ */
-//    background: -o-linear-gradient(top, #FAFAFA 0%,#e6e6e6 87%,#e6e6e6 99%); /* Opera11.10+ */
-//    background: -ms-linear-gradient(top, #FAFAFA 0%,#e6e6e6 87%,#e6e6e6 99%); /* IE10+ */
-//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#e6e6e6',GradientType=0 ); /* IE6-9 */
-//    background: linear-gradient(top, #FAFAFA 0%,#e6e6e6 87%,#e6e6e6 99%); /* W3C */
-    /* for ie9 */
-//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#949292', endColorstr='#5B5A5A',GradientType=0 ); /* IE6-9 */
-//    white-space: nowrap;
     color: #0e0e0e;
-//    text-shadow: 0 1px 0 #FAFAFA;
     border: 1px solid #8E8E8E;
     border-radius: 4px;
 
@@ -587,21 +549,12 @@ label.error {
 .openerp a.oe_secondary_submenu_item.leaf.active {
     display: block;
     background: #8e8e8e; /* Old browsers */
-//    background: -moz-linear-gradient(top, #000000 0%, #000000 11%, #8e8e8e 86%, #8e8e8e 91%, #8e8e8e 96%); /* FF3.6+ */
-//    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#000000), color-stop(11%,#000000), color-stop(86%,#8e8e8e), color-stop(91%,#8e8e8e), color-stop(96%,#8e8e8e)); /* Chrome,Safari4+ */
-//    background: -webkit-linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* Chrome10+,Safari5.1+ */
-//    background: -o-linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* Opera11.10+ */
-//    background: -ms-linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* IE10+ */
-//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#8e8e8e',GradientType=0 ); /* IE6-9 */
-//    background: linear-gradient(top, #000000 0%,#000000 11%,#8e8e8e 86%,#8e8e8e 91%,#8e8e8e 96%); /* W3C */
     background: none;
-//    box-shadow: 0 1px 2px #FAFAFA, 0 1px 1px #6e6e6e inset;
     padding: 0 5px 2px 10px;
     line-height: 20px;
     color: #000;
     font-weight: bold;
     text-decoration: none;
-//    text-shadow: #e6e6e6 0 1px 0;
 }
 .openerp a.oe_secondary_submenu_item.submenu.opened span:before {
     content: "\25be";
@@ -619,7 +572,6 @@ label.error {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#e6e6e6',GradientType=0 );
     color: #6e6e6e;
     letter-spacing: 0.5px;
-//    text-shadow: 0 1px 0 #FAFAFA;
 }
 .openerp .company_logo_link {
     display: block;
@@ -723,13 +675,8 @@ label.error {
 
 /* Footer */
 .openerp div.oe_footer {
-//    background: none repeat scroll 0 0 #CCCCCC;
     overflow: hidden;
-//    padding: 5px 0;
     position: relative;
-//    -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.4);
-//    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.4);
-//    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.4);
 }
 .openerp div.oe_footer p.oe_footer_powered {
     left: 50%;
@@ -885,7 +832,6 @@ label.error {
     font-weight: normal;
     padding: 1px 0 1px 10px;
     text-decoration: none;
-//    text-shadow: #FAFAFA 0 1px 0;
     
 }
 .openerp .searchview_group_string:hover {
@@ -1057,7 +1003,7 @@ label.error {
     padding-left: 3px;
     color: #333;
 #    text-align: center;
-    border-left: 1px solid #FAFAFA;
+#    border-left: 1px solid #FAFAFA;
 }
 .openerp .oe-listview th.oe-sortable .ui-icon {
     margin: -4px 0 0;
@@ -1238,7 +1184,6 @@ label.error {
     line-height: 20px;
     font-size: 95%;
     color: #8e8e8e;
-//    text-shadow: white 0 1px 0;
     font-weight: normal;
 }
 .openerp .oe_form_notebook ul.ui-tabs-nav li {
@@ -1323,7 +1268,6 @@ label.error {
     color: #4c4c4c;
 }
 .openerp fieldset.oe_group_box {
-//carlo    border: 1px solid #AAAAAA;
     moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
@@ -1363,7 +1307,6 @@ label.error {
 }
 
 .openerp .oe_form_pager {
-//carlo    margin-right: 3px;
 }
 
 
@@ -1676,7 +1619,6 @@ label.error {
 }
 .openerp .separator.horizontal {
     font-weight: bold;
-//    font-style: oblique;
     border-bottom-width: 1px;
     margin: 3px 4px 3px 1px;
     height: 17px;
@@ -1759,11 +1701,12 @@ label.error {
     border-spacing: 4px;
 }
 .openerp .ui-widget-header {
-    background: white none;
+    border: 0px;
 }
 /* progress bars */
 .openerp .ui-progressbar .ui-widget-header {
-    background: #cccccc url(/web/static/lib/jquery.ui/css/smoothness/images/ui-bg_highlight-soft_75_cccccc_1x100.png) 50% 50% repeat-x;
+   background: #d1d1d1;
+
 }
 
 /* Sidebar */
@@ -1867,7 +1810,6 @@ label.error {
 
 .openerp .sidebar-main-div {
     height: 100%;
-//    border-left: 1px solid #e6e6e6;
 }
 
 .openerp .sidebar-content {
@@ -1887,8 +1829,6 @@ label.error {
 }
 
 .openerp .sidebar-main-div a {
-//    color: #8e8e8e;
-//    text-shadow: white 0 1px 0;
     text-decoration: none;
 }
 
@@ -1936,23 +1876,11 @@ label.error {
     margin:0;
     font-size: 100%;
     color: #0E0E0E;
-//    text-shadow: white 0 1px 0;
     padding-left: 10px;
     padding-right: 21px;
-//    height: 21px;
 
     background: #E6E6E6; /* Old browsers */
-//background: -moz-linear-gradient(top, #FAFAFA 0%, #e6e6e6 100%); /* FF3.6+ */
-//    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FAFAFA), color-stop(100%,#e6e6e6)); /* Chrome,Safari4+ */
-//    background: -webkit-linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* Chrome10+,Safari5.1+ */
-//    background: -o-linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* Opera11.10+ */
-//    background: -ms-linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* IE10+ */
-//    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FAFAFA', endColorstr='#E6E6E6',GradientType=0 ); /* IE6-9 */
-//    background: linear-gradient(top, #FAFAFA 0%,#e6e6e6 100%); /* W3C */
-
     border: 1px solid #8E8E8E;
-//    border-right-width: 0;
-//    border-left-width: 0;
     border-radius: 4px;
     font-weight: normal;
 }
@@ -2420,7 +2348,7 @@ ul.oe-arrow-list li.oe-arrow-list-selected .oe-arrow-list-after {
 .openerp .oe_button {
     display: inline-block;
     border: 1px solid #8e8e8e;
-    color: #8e8e8e;
+//    color: #8e8e8e;
 //    text-shadow: #FAFAFA 0 1px 0;
     font-size: 12px;
     padding: 3px 10px;
@@ -2474,17 +2402,17 @@ ul.oe-arrow-list li.oe-arrow-list-selected .oe-arrow-list-after {
     -webkit-background-size: auto auto !important;
     background-size: 100% 100%;
     background: #e3e3e3, none;
-    background: none, -webkit-gradient(linear, left top, left bottom, from(#f6f6f6), to(#e3e3e3));
-    background: none, -webkit-linear-gradient(#f6f6f6, #e3e3e3);
-    background: none, -moz-linear-gradient(#f6f6f6, #e3e3e3);
-    background: none, -o-linear-gradient(top, #f6f6f6, #e3e3e3);
-    background: none, -khtml-gradient(linear, left top, left bottom, from(#f6f6f6), to(#e3e3e3));
-    background: -ms-linear-gradient(top, #f6f6f6, #e3e3e3);
+//    background: none, -webkit-gradient(linear, left top, left bottom, from(#f6f6f6), to(#e3e3e3));
+//    background: none, -webkit-linear-gradient(#f6f6f6, #e3e3e3);
+//    background: none, -moz-linear-gradient(#f6f6f6, #e3e3e3);
+//    background: none, -o-linear-gradient(top, #f6f6f6, #e3e3e3);
+//    background: none, -khtml-gradient(linear, left top, left bottom, from(#f6f6f6), to(#e3e3e3));
+//    background: -ms-linear-gradient(top, #f6f6f6, #e3e3e3);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#e3e3e3',GradientType=0 );
     -moz-box-shadow: 0 0 3px #80bfff, 0 1px 1px rgba(255, 255, 255, 0.8) inset;
     -webkit-box-shadow: 0 0 3px #80bfff, 0 1px 1px rgba(255, 255, 255, 0.8) inset;
     -o-box-shadow: 0 0 3px #80bfff, 0 1px 1px rgba(255, 255, 255, 0.8) git cinset;
-    box-shadow: 0 0 3px #80bfff, 0 1px 1px rgba(255, 255, 255, 0.8) inset;
+//    box-shadow: 0 0 3px #80bfff, 0 1px 1px rgba(255, 255, 255, 0.8) inset;
 }
 
 .openerp .oe_button:active,
