--- a/data_migration/wizard/file_import_view.xml
+++ b/data_migration/wizard/file_import_view.xml
@@ -74,6 +74,7 @@
                         <field name="file_name" invisible="1" />
                         <field name="content_base64" filename="file_name" required="True" />
                         <field name="format" />
+                        <field name="update_product_name" />
                     </group>
                     
                     <!-- Items per lo stato end -->
