[task_time_control]: Added field 'date' to give the possibility to force the date

--- a/task_time_control/wizard/task_time_control_confirm_wizard.xml
+++ b/task_time_control/wizard/task_time_control_confirm_wizard.xml
@@ -11,6 +11,8 @@
                     <newline/>
                     <field name="name" string="Name"/>
                     <newline/>
+                    <field name="task_date" />
+                    <newline/>
                     <field name="time" string="Time" widget="float_time"/>
                     <group colspan="4">
                         <button string="Cancel" special="cancel" icon="gtk-cancel"/>
