--- a/sale_order_confirm/wizard/add_order_version_view.xml
+++ b/sale_order_confirm/wizard/add_order_version_view.xml
@@ -12,6 +12,7 @@
                     <group col="2" colspan="2">
                         <button icon='gtk-cancel' special="cancel" string="_Cancel" />
                         <button name="create_revision" string="Reject with New Revision" colspan="1" type="object" icon="gtk-go-forward" />
+                        <button name="reject_revision" string="Reject and Close" colspan="1" type="object" icon="gtk-no" />
                     </group>
                 </form>
             </field>
