--- a/l10n_it_ricevute_bancarie/wizard/wizard_accreditation.xml
+++ b/l10n_it_ricevute_bancarie/wizard/wizard_accreditation.xml
@@ -16,8 +16,9 @@
                     <field name="accreditation_amount" />
                     <field name="bank_account_id" />
                     <field name="bank_amount" />
-                    <field name="bank_expense_account_id" />
-                    <field name="expense_amount" />
+                    <field name="date_value" />
+                    <!--field name="bank_expense_account_id" /-->
+                    <!--field name="expense_amount" /-->
                     <button string="Cancel" special="cancel" icon="gtk-cancel" colspan="2"/>
                     <button string="Create" name="create_move" type="object" icon="gtk-ok" colspan="2"/>
                     <!--separator string="You can also skip this step and set the distinta status to 'accredited' anyway" colspan="4"/-->
@@ -53,8 +54,9 @@
                     <field name="accreditation_amount" />
                     <field name="bank_account_id" />
                     <field name="bank_amount" />
-                    <field name="bank_expense_account_id" />
-                    <field name="expense_amount" />
+                    <field name="date_value" />
+                    <!--field name="bank_expense_account_id" /-->
+                    <!--field name="expense_amount" /-->
                     <button string="Cancel" special="cancel" icon="gtk-cancel" colspan="2"/>
                     <button string="Create" name="create_move" type="object" icon="gtk-ok" colspan="2"/>
                     <separator string="You can also skip this step and set the distinta status to 'accredited' anyway" colspan="4"/>
