[data_migration] implement new function for mapping fiscal position

--- a/data_migration/wizard/file_import_view.xml
+++ b/data_migration/wizard/file_import_view.xml
@@ -19,8 +19,9 @@
                         <field name="partner_type" />
                         <field name="format" />
                         <field name="strict" />
+                        <newline />
+                        <field name="partner_template_id" widget="selection" />
                     </group>
-                   
                     <!-- Items per lo stato end -->
                     <group colspan="8" col="8" states="end">
                         <label string="Import file. Verra segnalata la fine del'importazione, nelle 'Messaggi' (Vendite -> Configurazione -> Email -> Messaggi)."/>
