--- a/sale_order_confirm/wizard/confirmation_view.xml
+++ b/sale_order_confirm/wizard/confirmation_view.xml
@@ -38,8 +38,10 @@
                         <field name="sale_order_id" invisible="1"/>
                         <field name="new_sale_order" invisible="1"/>
                     </group>
+                    <separator colspan="4" string="Address"/>
+                    <field name="partner_shipping_id" colspan="4" nolabel="1"/>
                     <separator colspan="4" string="Products"/>
-                    <field name="confirm_line" on_change="onchange_line(confirm_line)" colspan="4" nolabel="1" mode="tree,form" width="550" height="200">
+                    <field name="confirm_line" on_change="onchange_line(confirm_line)" colspan="4" nolabel="1" mode="tree" width="550" height="200">
                         <tree editable="bottom" string="Product Order">
                             <field name="product_id" on_change="onchange_product(product_id, quantity, parent.sale_order_id, context)"/>
                             <field name="name" />
