[right menu clear]

--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -1904,9 +1904,9 @@ label.error {
     padding-right: 21px;
     padding-top: 3px;
     height: 22px;
-  /*   background: #E6E6E6; */
+  /*   background: #E6E6E6;
     border: 1px solid #CECECE;
-    border-radius: 12px;
+    border-radius: 12px; */
     font-weight: bold;
 }
 
