Implement Many2many Checkbox widget.

--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -2593,3 +2593,8 @@ padding-top: 0;
   font-style: italic;
   text-decoration: none;
 }
+.checkboxvertical{
+    vertical-align: initial;
+    display: block;
+    align-items: baseline;
+}
