--- a/web_client/ea_web-github/addons/web/static/src/css/base.css
+++ b/web_client/ea_web-github/addons/web/static/src/css/base.css
@@ -1381,7 +1381,7 @@ label.error {
     color: #1e1e1e;
     font-weight: bold;
     text-align: left !important;
-    padding-right: 4px;
+    padding-left: 6px;
 }
 .openerp .oe_forms .searchview_group_content label.oe_label, .openerp .searchview_group_content .oe_forms label.oe_label_help { /* making a distinction between labels in search view and other labels */
     margin: 3px 0 0 3px;
